# 2023-project-yousmii

./: .clang-format  .gitignore  CMakeLists.txt  Ideas to implement.txt  README.md
.circleci/: config.yml
assets/levels/: level1.lvl  level2.lvl
docs/: Doxyfile
docs/html/: _asset_manager_8hpp_source.html  _banana_8hpp_source.html  _c_o_l_o_r_s_8hpp_source.html  _camera_8hpp_source.html  _character_8hpp_source.html  _chasing_state_8hpp_source.html  _collectable_8hpp_source.html  _d_e_f_i_n_i_t_i_o_n_s_8hpp_source.html  _entity_8hpp_source.html  _entity_factory_8hpp_source.html  _entity_list_8hpp_source.html  _events_8hpp_source.html  _game_8hpp_source.html  _game_over_state_8hpp_source.html  _game_state_8hpp_source.html  _ghost_state_8hpp_source.html  _ghost_state_manager_8hpp_source.html  _input_manager_8hpp_source.html  _level_8hpp_source.html  _main_menu_state_8hpp_source.html  _moving_state_8hpp_source.html  _pacman_state_8hpp_source.html  _pacman_state_manager_8hpp_source.html  _pause_state_8hpp_source.html  _paused_state_8hpp_source.html  _randomizer_8hpp_source.html  _s_e_t_t_i_n_g_s_8hpp_source.html  _s_t_a_t_e___l_i_s_t_8hpp_source.html  _score_8hpp_source.html  _setup_state_8hpp_source.html  _simulator_8hpp_source.html  _state_8hpp_source.html  _state_machine_8hpp_source.html  _state_manager_8hpp_source.html  _stopwatch_8hpp_source.html  _tile_8hpp_source.html  _world_8hpp_source.html  annotated.html  annotated_dup.js  class_logic_1_1_camera-members.html  (+180 more)
docs/html/search/: all_0.js  all_1.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  functions_0.js  functions_1.js  functions_3.js  functions_4.js  functions_5.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  (+8 more)
src/: AssetManager.cpp  AssetManager.hpp  CMakeLists.txt  COLORS.hpp  DEFINITIONS.hpp  Game.cpp  Game.hpp  InputManager.cpp  InputManager.hpp  SETTINGS.hpp  STATE_LIST.hpp  State.hpp  StateMachine.cpp  StateMachine.hpp  Stopwatch.cpp  Stopwatch.hpp  assetmanager.cpp  game.hpp  main.cpp  statemachine.cpp  statemachine.hpp
src/backend/: CMakeLists.txt
src/events/: CMakeLists.txt  EVENT_TYPES.hpp  EntityMoveEvent.cpp  EntityMoveEvent.hpp  Event.hpp
src/frontend/: CMakeLists.txt  Game.cpp  Game.h
src/frontend/states/: CMakeLists.txt  EndLevelState.cpp  EndLevelState.h  LevelState.cpp  LevelState.h  MenuState.cpp  MenuState.h  PausedState.cpp  PausedState.h  State.h
src/logic/: AbstractFactory.cpp  AbstractFactory.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Event.cpp  Event.hpp  Events.hpp  Randomizer.cpp  Randomizer.hpp  Simulator.cpp  Simulator.hpp  Stopwatch.cpp  Stopwatch.hpp  World.cpp  World.hpp
src/logic/entities/: Coin.cpp  Coin.hpp  Entity.hpp  EntityList.hpp  Fruit.cpp  Fruit.hpp  Ghost.cpp  Ghost.hpp  Pacman.cpp  Pacman.hpp  Wall.cpp  Wall.hpp
src/logic/entities/states/: CharacterState.cpp  CharacterState.hpp  GhostState.hpp  GhostStateManager.cpp  GhostStateManager.hpp  PacmanState.hpp  PacmanStateManager.cpp  PacmanStateManager.hpp  StateManager.hpp  Statemanager.cpp  Statemanager.inl
src/logic/entities/states/ghost/: ChasingState.cpp  ChasingState.hpp  FrightenedState.cpp  FrightenedState.hpp  RespawningState.cpp  RespawningState.hpp  SetupState.cpp  SetupState.hpp
src/logic/entities/states/pacman/: DeadState.cpp  DeadState.hpp  MovingState.cpp  MovingState.hpp  PausedState.cpp  PausedState.hpp  PowerUpState.cpp  PowerUpState.hpp
src/logic/level/: Level.cpp  Level.hpp  LevelParser.cpp  LevelParser.hpp  Score.cpp  Score.hpp  Tile.cpp  Tile.hpp
src/singletons/: CMakeLists.txt  Randomizer.cpp  Randomizer.hpp  Stopwatch.cpp  Stopwatch.hpp
src/states/: MainMenuState.cpp  MainMenuState.hpp  SplashState.cpp  SplashState.hpp
src/view/: AssetManager.cpp  AssetManager.hpp  COLORS.hpp  DEFINITIONS.hpp  EntityFactory.cpp  EntityFactory.hpp  Game.cpp  Game.hpp  InputManager.cpp  InputManager.hpp  STATE_LIST.hpp  State.hpp  StateMachine.cpp  StateMachine.hpp
src/view/entities/: Banana.cpp  Banana.hpp  Character.cpp  Character.hpp  Coin.cpp  Coin.hpp  Collectable.cpp  Collectable.hpp  Fruit.cpp  Fruit.hpp  Ghost.cpp  Ghost.hpp  Pacman.cpp  Pacman.hpp  Wall.cpp  Wall.hpp
src/view/states/: GameOverState.cpp  GameOverState.hpp  GameState.cpp  GameState.hpp  MainMenuState.cpp  MainMenuState.hpp  PauseState.cpp  PauseState.hpp
